--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <h1>test</h1>
+    <!-- SIngle Page Application -->
+    <!-- inject the application here -->
+    <div id="app">
+
+    </div>
 </body>
 
 </html>
